--- a/index.html
+++ b/index.html
@@ -11,45 +11,41 @@
         <div class="container">
                 <!--Inicio topo-->
                 <div class="topo">
-                <div  class="imagem-topo"><img src="img/logo.png" width="116px"></div> 
+                    <div  class="imagem-topo"><img src="img/logo.png""></div> 
                 </div>
                 <!--fim topo-->
                 <div class="conteudo">
-                <div class="centralizar">
+                    <!-- titulo -->
                     <p id="titulo">Quem está assistindo?<p>
+                    <!-------- -->
                     <div class="corpo-icone">
-                    <div class="estrutura-icone">
-                                <img class="icone" src="img/01.png" width="140px">
-                        <span id="txt-titulo"><a id="link-icone" href=""> Thay</a></span>
+                        <div class="estrutura-icone">
+                            <img class="icone" src="img/01.png" width="140px">
+                            <span id="txt-titulo"><a id="link-icone" href=""> Thay</a></span>
                         </div>
-                    <div class="estrutura-icone">
-                                <img class="icone" src="img/02.png" width="140px">
-                                <span id="txt-titulo"><a id="link-icone" href=""> Luara</a></span>
+                        <div class="estrutura-icone">
+                                    <img class="icone" src="img/02.png" width="140px">
+                                    <span id="txt-titulo"><a id="link-icone" href=""> Luara</a></span>
+                        </div>
+                        <div class="estrutura-icone">
+                                    <img class="icone" src="img/03.png" width="140px">
+                                    <span id="txt-titulo"><a id="link-icone" href=""> Pedro</a></span>
+                        </div>
+                        <div class="estrutura-icone">
+                                    <img class="icone" src="img/04.png" width="140px">
+                                    <span id="txt-titulo"><a id="link-icone" href=""> Sarah</a></span>
+                        </div>
+                        <div class="estrutura-icone">     
+                                    <img class="icone" src="img/05.png" width="140px">  
+                                    <span id="txt-titulo"><a id="link-icone" href=""> Marcos</a></span>
+                        </div>
                     </div>
-                    <div class="estrutura-icone">
-                                <img class="icone" src="img/03.png" width="140px">
-                                <span id="txt-titulo"><a id="link-icone" href=""> Pedro</a></span>
-                    </div>
-                    <div class="estrutura-icone">
-                                <img class="icone" src="img/04.png" width="140px">
-                                <span id="txt-titulo"><a id="link-icone" href=""> Sarah</a></span>
-                    </div>
-                    <div class="estrutura-icone">     
-                                <img class="icone" src="img/05.png" width="140px">  
-                                <span id="txt-titulo"><a id="link-icone" href=""> Marcos</a></span>
-                    </div>
-                    <div class="limpar"></div>
-                    </div>
-                    <!--Fim estrutura icone-->
-                    <!--Inicio link gerencia-->
-                    
-                    <div class="corpo-gerencia">
-                        <a  id="link-gerencia" href="">GERENCIAR PERFIS</a>
-                    </div>
-                    <!--Fim link gerencia-->
-                    
                 </div>
-            </div>
+                <!--Inicio link gerencia-->
+                <div class="corpo-gerencia">
+                    <a  id="link-gerencia" href="">GERENCIAR PERFIS</a>
+                </div>
+                <!--Fim link gerencia-->
         </div>
         <!--fim corpo-->
         <!--Inicio marca d'agua-->
