mudanças finais de elementos

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                     <!-------- -->
                     <div class="corpo-icone">
                         <div class="estrutura-icone">
-                            <img class="icone" src="img/01.png" width="140px">
+                            <img class="icone" src="img/01.png">
                             <span id="txt-titulo"><a id="link-icone" href=""> Thay</a></span>
                         </div>
                         <div class="estrutura-icone">
-                                    <img class="icone" src="img/02.png" width="140px">
-                                    <span id="txt-titulo"><a id="link-icone" href=""> Luara</a></span>
+                            <img class="icone" src="img/02.png" >
+                            <span id="txt-titulo"><a id="link-icone" href=""> Luara</a></span>
                         </div>
                         <div class="estrutura-icone">
-                                    <img class="icone" src="img/03.png" width="140px">
-                                    <span id="txt-titulo"><a id="link-icone" href=""> Pedro</a></span>
+                            <img class="icone" src="img/03.png" >
+                            <span id="txt-titulo"><a id="link-icone" href=""> Pedro</a></span>
                         </div>
                         <div class="estrutura-icone">
-                                    <img class="icone" src="img/04.png" width="140px">
-                                    <span id="txt-titulo"><a id="link-icone" href=""> Sarah</a></span>
+                            <img class="icone" src="img/04.png" >
+                            <span id="txt-titulo"><a id="link-icone" href=""> Sarah</a></span>
                         </div>
-                        <div class="estrutura-icone">     
-                                    <img class="icone" src="img/05.png" width="140px">  
-                                    <span id="txt-titulo"><a id="link-icone" href=""> Marcos</a></span>
+                        <div class="estrutura-icone link-icone">     
+                            <img class="icone" src="img/05.png">  
+                            <span id="txt-titulo"><a id="link-icone" href=""> Marcos</a></span>
                         </div>
                     </div>
                 </div>
