modifição feita para deixar mais responsivo o layout

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="container">
                 <!--Inicio topo-->
                 <div class="topo">
-                    <div  class="imagem-topo"><img src="img/logo.png""></div> 
+                    <div  class="imagem-topo"><img src="img/logo.png"></div> 
                 </div>
                 <!--fim topo-->
                 <div class="conteudo">
                     <!-- titulo -->
-                    <p id="titulo">Quem está assistindo?<p>
+                    <p id="titulo">Quem está assistindo?</p>
                     <!-------- -->
                     <div class="corpo-icone">
                         <div class="estrutura-icone">
@@ -40,17 +40,18 @@
                             <span id="txt-titulo"><a id="link-icone" href=""> Marcos</a></span>
                         </div>
                     </div>
+                    <div class="corpo-gerencia">
+                        <a  id="link-gerencia" href="">Gereciar perfis</a>
+                    </div>
                 </div>
                 <!--Inicio link gerencia-->
-                <div class="corpo-gerencia">
-                    <a  id="link-gerencia" href="">GERENCIAR PERFIS</a>
-                </div>
+                
                 <!--Fim link gerencia-->
         </div>
         <!--fim corpo-->
         <!--Inicio marca d'agua-->
         <div class="marca-dagua">
-            <span id="marca">Feito por: Marcos Natan</span>
+           <p>Feito por: Marcos Natan</p>
         </div>
         <!--FIm marca d'agua-->
     </body>
