fazendo melhorias e hospedando no github

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/estilo.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="img/logo aba.png">
         <title>Clone Netflix</title>
     </head>
     <body>
